// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`md parser > frontmatter.md > config 1`] = `
{
  "drawings": {
    "enabled": true,
    "persist": false,
    "presenterOnly": false,
    "syncAll": true,
  },
  "fonts": {
    "italic": false,
    "local": [],
    "mono": [
      ""Fira Code"",
      "ui-monospace",
      "SFMono-Regular",
      "Menlo",
      "Monaco",
      "Consolas",
      ""Liberation Mono"",
      ""Courier New"",
      "monospace",
    ],
    "provider": "google",
    "sans": [
      ""Roboto"",
      ""Lato"",
      "ui-sans-serif",
      "system-ui",
      "-apple-system",
      "BlinkMacSystemFont",
      ""Segoe UI"",
      "Roboto",
      ""Helvetica Neue"",
      "Arial",
      ""Noto Sans"",
      "sans-serif",
      ""Apple Color Emoji"",
      ""Segoe UI Emoji"",
      ""Segoe UI Symbol"",
      ""Noto Color Emoji"",
    ],
    "serif": [
      ""Mate SC"",
      "ui-serif",
      "Georgia",
      "Cambria",
      ""Times New Roman"",
      "Times",
      "serif",
    ],
    "webfonts": [
      "Roboto",
      "Lato",
      "Mate SC",
      "Fira Code",
    ],
    "weights": [
      "200",
      "400",
      "600",
    ],
  },
  "layout": "cover",
  "title": "Hi",
}
`;

exports[`md parser > frontmatter.md > features 1`] = `
{
  "katex": false,
  "mermaid": false,
  "monaco": false,
  "tweet": false,
}
`;

exports[`md parser > frontmatter.md > slides 1`] = `
[
  {
    "content": "# Hi",
    "frontmatter": {
      "fonts": {
        "mono": "Fira Code",
        "sans": "Roboto, Lato",
        "serif": "Mate SC",
      },
      "layout": "cover",
    },
    "index": 0,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
# Hi
",
      "end": 8,
      "frontmatter": {
        "fonts": {
          "mono": "Fira Code",
          "sans": "Roboto, Lato",
          "serif": "Mate SC",
        },
        "layout": "cover",
      },
      "frontmatterRaw": "layout: cover
fonts:
  sans: Roboto, Lato
  serif: Mate SC
  mono: Fira Code
",
      "frontmatterStyle": "frontmatter",
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "---
layout: cover
fonts:
  sans: Roboto, Lato
  serif: Mate SC
  mono: Fira Code
---

# Hi

",
      "start": 0,
      "title": "Hi",
    },
    "title": "Hi",
  },
  {
    "content": "# Hello",
    "frontmatter": {
      "layout": "center",
      "meta": {
        "duration": 12,
        "title": "FooBar",
      },
    },
    "index": 1,
    "level": 1,
    "note": "This is note",
    "source": {
      "content": "
# Hello
",
      "end": 16,
      "frontmatter": {
        "layout": "center",
        "meta": {
          "duration": 12,
          "title": "FooBar",
        },
      },
      "frontmatterRaw": "meta:
  title: FooBar
  duration: 12
layout: center
",
      "frontmatterStyle": "frontmatter",
      "index": 1,
      "level": 1,
      "note": "This is note",
      "raw": "---
meta:
  title: FooBar
  duration: 12
layout: center
---

# Hello

<!--
This is note
-->
",
      "start": 8,
      "title": "Hello",
    },
    "title": "Hello",
  },
  {
    "content": "# Morning",
    "frontmatter": {},
    "index": 2,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
# Morning
",
      "end": 19,
      "frontmatter": {},
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 2,
      "level": 1,
      "note": undefined,
      "raw": "
# Morning

",
      "start": 17,
      "title": "Morning",
    },
    "title": "Morning",
  },
  {
    "content": "<!-- This is not note -->
Hey",
    "frontmatter": {
      "layout": "text",
    },
    "index": 3,
    "level": undefined,
    "note": "This is note",
    "source": {
      "content": "
<!-- This is not note -->
Hey
",
      "end": 26,
      "frontmatter": {
        "layout": "text",
      },
      "frontmatterRaw": "layout: text
",
      "frontmatterStyle": "frontmatter",
      "index": 3,
      "level": undefined,
      "note": "This is note",
      "raw": "---
layout: text
---

<!-- This is not note -->
Hey

<!--
This is note
-->
",
      "start": 19,
      "title": undefined,
    },
    "title": undefined,
  },
  {
    "content": "\`\`\`md
---
this should be treated as code block
---
----
\`\`\`",
    "frontmatter": {},
    "index": 4,
    "level": undefined,
    "note": undefined,
    "source": {
      "content": "
\`\`\`md
---
this should be treated as code block
---
----
\`\`\`
",
      "end": 35,
      "frontmatter": {},
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 4,
      "level": undefined,
      "note": undefined,
      "raw": "
\`\`\`md
---
this should be treated as code block
---
----
\`\`\`

",
      "start": 27,
      "title": undefined,
    },
    "title": undefined,
  },
  {
    "content": "Content 1",
    "frontmatter": {
      "layout": "from yaml",
    },
    "index": 5,
    "level": undefined,
    "note": undefined,
    "source": {
      "content": "
Content 1
",
      "end": 44,
      "frontmatter": {
        "layout": "from yaml",
      },
      "frontmatterRaw": "
# The first yaml block should be treated as frontmatter
layout: from yaml
",
      "frontmatterStyle": "yaml",
      "index": 5,
      "level": undefined,
      "note": undefined,
      "raw": "\`\`\`yaml
layout: from yaml
\`\`\`

Content 1

",
      "start": 36,
      "title": undefined,
    },
    "title": undefined,
  },
  {
    "content": "\`\`\`yaml
# When there is already a frontmatter, the first yaml block should be treated as content
layout: should not from yaml 1
\`\`\`

Content 2",
    "frontmatter": {
      "layout": "cover",
    },
    "index": 6,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
\`\`\`yaml
# When there is already a frontmatter, the first yaml block should be treated as content
layout: should not from yaml 1
\`\`\`

Content 2
",
      "end": 55,
      "frontmatter": {
        "layout": "cover",
      },
      "frontmatterRaw": "layout: cover
",
      "frontmatterStyle": "frontmatter",
      "index": 6,
      "level": 1,
      "note": undefined,
      "raw": "---
layout: cover
---

\`\`\`yaml
# When there is already a frontmatter, the first yaml block should be treated as content
layout: should not from yaml 1
\`\`\`

Content 2

",
      "start": 44,
      "title": "When there is already a frontmatter, the first yaml block should be treated as content",
    },
    "title": "When there is already a frontmatter, the first yaml block should be treated as content",
  },
  {
    "content": "# Title

\`\`\`yaml
# When there is already a frontmatter, the first yaml block should be treated as content
layout: should not from yaml 2
\`\`\`

Content 3",
    "frontmatter": {},
    "index": 7,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
# Title

\`\`\`yaml
# When there is already a frontmatter, the first yaml block should be treated as content
layout: should not from yaml 2
\`\`\`

Content 3
",
      "end": 66,
      "frontmatter": {},
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 7,
      "level": 1,
      "note": undefined,
      "raw": "
# Title

\`\`\`yaml
# When there is already a frontmatter, the first yaml block should be treated as content
layout: should not from yaml 2
\`\`\`

Content 3

",
      "start": 56,
      "title": "Title",
    },
    "title": "Title",
  },
]
`;

exports[`md parser > mdc.md > config 1`] = `
{
  "drawings": {
    "enabled": true,
    "persist": false,
    "presenterOnly": false,
    "syncAll": true,
  },
  "fonts": {
    "italic": false,
    "local": [],
    "mono": [
      "ui-monospace",
      "SFMono-Regular",
      "Menlo",
      "Monaco",
      "Consolas",
      ""Liberation Mono"",
      ""Courier New"",
      "monospace",
    ],
    "provider": "google",
    "sans": [
      "ui-sans-serif",
      "system-ui",
      "-apple-system",
      "BlinkMacSystemFont",
      ""Segoe UI"",
      "Roboto",
      ""Helvetica Neue"",
      "Arial",
      ""Noto Sans"",
      "sans-serif",
      ""Apple Color Emoji"",
      ""Segoe UI Emoji"",
      ""Segoe UI Symbol"",
      ""Noto Color Emoji"",
    ],
    "serif": [
      "ui-serif",
      "Georgia",
      "Cambria",
      ""Times New Roman"",
      "Times",
      "serif",
    ],
    "webfonts": [],
    "weights": [
      "200",
      "400",
      "600",
    ],
  },
  "mdc": true,
  "title": "MDC{style="color:red"}",
}
`;

exports[`md parser > mdc.md > features 1`] = `
{
  "katex": false,
  "mermaid": false,
  "monaco": false,
  "tweet": false,
}
`;

exports[`md parser > mdc.md > slides 1`] = `
[
  {
    "content": "# MDC{style="color:red"}

:arrow{x1=1 y1=1 x2=2 y2=2}",
    "frontmatter": {
      "mdc": true,
    },
    "index": 0,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
# MDC{style="color:red"}

:arrow{x1=1 y1=1 x2=2 y2=2}
",
      "end": 8,
      "frontmatter": {
        "mdc": true,
      },
      "frontmatterRaw": "mdc: true
",
      "frontmatterStyle": "frontmatter",
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "---
mdc: true
---

# MDC{style="color:red"}

:arrow{x1=1 y1=1 x2=2 y2=2}

",
      "start": 0,
      "title": "MDC{style="color:red"}",
    },
    "title": "MDC{style="color:red"}",
  },
]
`;

exports[`md parser > minimal.md > config 1`] = `
{
  "drawings": {
    "enabled": true,
    "persist": false,
    "presenterOnly": false,
    "syncAll": true,
  },
  "fonts": {
    "italic": false,
    "local": [],
    "mono": [
      "ui-monospace",
      "SFMono-Regular",
      "Menlo",
      "Monaco",
      "Consolas",
      ""Liberation Mono"",
      ""Courier New"",
      "monospace",
    ],
    "provider": "google",
    "sans": [
      "ui-sans-serif",
      "system-ui",
      "-apple-system",
      "BlinkMacSystemFont",
      ""Segoe UI"",
      "Roboto",
      ""Helvetica Neue"",
      "Arial",
      ""Noto Sans"",
      "sans-serif",
      ""Apple Color Emoji"",
      ""Segoe UI Emoji"",
      ""Segoe UI Symbol"",
      ""Noto Color Emoji"",
    ],
    "serif": [
      "ui-serif",
      "Georgia",
      "Cambria",
      ""Times New Roman"",
      "Times",
      "serif",
    ],
    "webfonts": [],
    "weights": [
      "200",
      "400",
      "600",
    ],
  },
  "title": "H1",
}
`;

exports[`md parser > minimal.md > features 1`] = `
{
  "katex": false,
  "mermaid": false,
  "monaco": false,
  "tweet": false,
}
`;

exports[`md parser > minimal.md > slides 1`] = `
[
  {
    "content": "# H1
## H2
### H3

Sample Text

\`\`\`ts
console.log('Hello World')
\`\`\`",
    "frontmatter": {},
    "index": 0,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
# H1
## H2
### H3

Sample Text

\`\`\`ts
console.log('Hello World')
\`\`\`
",
      "end": 10,
      "frontmatter": {},
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "
# H1
## H2
### H3

Sample Text

\`\`\`ts
console.log('Hello World')
\`\`\`

",
      "start": 0,
      "title": "H1",
    },
    "title": "H1",
  },
  {
    "content": "# Hello

- Hello
- Hi
- Hey
- Yo",
    "frontmatter": {},
    "index": 1,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
# Hello

- Hello
- Hi
- Hey
- Yo
",
      "end": 18,
      "frontmatter": {},
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 1,
      "level": 1,
      "note": undefined,
      "raw": "
# Hello

- Hello
- Hi
- Hey
- Yo

",
      "start": 11,
      "title": "Hello",
    },
    "title": "Hello",
  },
  {
    "content": "Nice to meet you",
    "frontmatter": {},
    "index": 2,
    "level": undefined,
    "note": undefined,
    "source": {
      "content": "
Nice to meet you
",
      "end": 22,
      "frontmatter": {},
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 2,
      "level": undefined,
      "note": undefined,
      "raw": "
Nice to meet you

",
      "start": 19,
      "title": undefined,
    },
    "title": undefined,
  },
]
`;

exports[`md parser > multi-entries.md > config 1`] = `
{
  "drawings": {
    "enabled": true,
    "persist": false,
    "presenterOnly": false,
    "syncAll": true,
  },
  "fonts": {
    "italic": false,
    "local": [],
    "mono": [
      "ui-monospace",
      "SFMono-Regular",
      "Menlo",
      "Monaco",
      "Consolas",
      ""Liberation Mono"",
      ""Courier New"",
      "monospace",
    ],
    "provider": "google",
    "sans": [
      "ui-sans-serif",
      "system-ui",
      "-apple-system",
      "BlinkMacSystemFont",
      ""Segoe UI"",
      "Roboto",
      ""Helvetica Neue"",
      "Arial",
      ""Noto Sans"",
      "sans-serif",
      ""Apple Color Emoji"",
      ""Segoe UI Emoji"",
      ""Segoe UI Symbol"",
      ""Noto Color Emoji"",
    ],
    "serif": [
      "ui-serif",
      "Georgia",
      "Cambria",
      ""Times New Roman"",
      "Times",
      "serif",
    ],
    "webfonts": [],
    "weights": [
      "200",
      "400",
      "600",
    ],
  },
  "src": "sub/page1.md",
  "title": "Page 1",
}
`;

exports[`md parser > multi-entries.md > features 1`] = `
{
  "katex": true,
  "mermaid": false,
  "monaco": false,
  "tweet": true,
}
`;

exports[`md parser > multi-entries.md > slides 1`] = `
[
  {
    "content": "# Page 1",
    "frontmatter": {},
    "index": 0,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 1",
      "end": 2,
      "frontmatter": {},
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "# Page 1
",
      "start": 0,
      "title": "Page 1",
    },
    "title": "Page 1",
  },
  {
    "content": "# Page 2

<Tweet />",
    "frontmatter": {
      "background": "https://sli.dev/demo-cover.png#2",
      "layout": "cover",
    },
    "index": 1,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 2

<Tweet />",
      "end": 8,
      "frontmatter": {
        "layout": "cover",
      },
      "frontmatterRaw": "layout: cover
",
      "frontmatterStyle": "frontmatter",
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "---
layout: cover
---

# Page 2

<Tweet />
",
      "start": 0,
      "title": "Page 2",
    },
    "title": "Page 2",
  },
  {
    "content": "# Page 3",
    "frontmatter": {
      "background": "https://sli.dev/demo-cover.png#34",
    },
    "index": 2,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 3",
      "end": 2,
      "frontmatter": {},
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "# Page 3
",
      "start": 0,
      "title": "Page 3",
    },
    "title": "Page 3",
  },
  {
    "content": "# Page 4

<Tweet />",
    "frontmatter": {
      "background": "https://sli.dev/demo-cover.png#34",
      "layout": "cover",
    },
    "index": 3,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 4

<Tweet />",
      "end": 10,
      "frontmatter": {
        "layout": "cover",
      },
      "frontmatterRaw": "layout: cover
",
      "frontmatterStyle": "frontmatter",
      "index": 1,
      "level": 1,
      "note": undefined,
      "raw": "---
layout: cover
---

# Page 4

<Tweet />
",
      "start": 2,
      "title": "Page 4",
    },
    "title": "Page 4",
  },
  {
    "content": "# Page 1",
    "frontmatter": {
      "background": "https://sli.dev/demo-cover.png#14",
    },
    "index": 4,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 1",
      "end": 2,
      "frontmatter": {},
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "# Page 1
",
      "start": 0,
      "title": "Page 1",
    },
    "title": "Page 1",
  },
  {
    "content": "# Page 2

<Tweet />",
    "frontmatter": {
      "background": "https://sli.dev/demo-cover.png#14",
      "layout": "cover",
    },
    "index": 5,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 2

<Tweet />",
      "end": 8,
      "frontmatter": {
        "layout": "cover",
      },
      "frontmatterRaw": "layout: cover
",
      "frontmatterStyle": "frontmatter",
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "---
layout: cover
---

# Page 2

<Tweet />
",
      "start": 0,
      "title": "Page 2",
    },
    "title": "Page 2",
  },
  {
    "content": "# Page 3",
    "frontmatter": {
      "background": "https://sli.dev/demo-cover.png#14",
    },
    "index": 6,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 3",
      "end": 2,
      "frontmatter": {},
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "# Page 3
",
      "start": 0,
      "title": "Page 3",
    },
    "title": "Page 3",
  },
  {
    "content": "# Page 4

<Tweet />",
    "frontmatter": {
      "background": "https://sli.dev/demo-cover.png#14",
      "layout": "cover",
    },
    "index": 7,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 4

<Tweet />",
      "end": 10,
      "frontmatter": {
        "layout": "cover",
      },
      "frontmatterRaw": "layout: cover
",
      "frontmatterStyle": "frontmatter",
      "index": 1,
      "level": 1,
      "note": undefined,
      "raw": "---
layout: cover
---

# Page 4

<Tweet />
",
      "start": 2,
      "title": "Page 4",
    },
    "title": "Page 4",
  },
  {
    "content": "# Inline Page

$x+2$",
    "frontmatter": {},
    "index": 8,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
# Inline Page

$x+2$
",
      "end": 25,
      "frontmatter": {},
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 4,
      "level": 1,
      "note": undefined,
      "raw": "
# Inline Page

$x+2$

",
      "start": 20,
      "title": "Inline Page",
    },
    "title": "Inline Page",
  },
]
`;
